# OpenQilin

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  FUNDING.yml  README.md  ROADMAP.md  alembic.ini  compose.yml  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: implementation_work_item.yml
.github/workflows/: ci.yml
.secrets/: discord_role_bot_tokens.example.json
constitution/: AuthorityMatrix.yaml  BudgetPolicy.yaml  ChangeControl.md  Charter.md  EscalationPolicy.yaml  PolicyManifest.yaml  PolicyRules.yaml  README.md  SafetyPolicy.yaml
constitution/core/: AuthorityMatrix.yaml  ObligationPolicy.yaml  PolicyManifest.yaml  PolicyRules.yaml
constitution/domain/: BudgetPolicy.yaml  EscalationPolicy.yaml  OperationsPolicy.yaml  SafetyPolicy.yaml
constitution/governance/: ChangeControl.md  Charter.md
constitution/templates/: DomainPolicyTemplate.yaml  ReleaseRecordTemplate.yaml
constitution/versions/: README.md
design/: README.md  TODO.txt
design/v1/: AppEntrypointsAndProcessTopology-v1.md  BootstrapAndMigrationWorkflow-v1.md  CICDAndQualityGateDesign-v1.md  ModuleDependencyMap-v1.md  (+8 more)
docs/: GovernanceGuide.md  QuickStart.md  README.md  SystemOverview.md
implementation/: README.md  TODO.txt
migrations/: README.md  env.py
spec/: AgentLifecycle.md  Budget.md  Communication.md  Constitution.md  ExecutionSandbox.md  Memory.md  Observability.md  PolicyEngine.md  README.md  RuntimeInfrastructure.md  TODO.txt  TaskOrchestrator.md
tests/: README.md  conftest.py
(+766 files in other folders)
